# tiba

./: .gitignore  LICENSE  MANIFESTO.md  README.md  federation.yaml  index.html  pyproject.toml
.github/workflows/: index.yml
docs/papers/: README.md
docs/papers/constructive/: draft.md
docs/papers/diagnostic/: draft.md
docs/superpowers/plans/: 2026-05-05-tiba-v0.1.0.md
docs/superpowers/specs/: 2026-05-05-tiba-design.md
schema/: tiba.yaml.schema.json
scripts/: install_pre_push_hook.ps1  pre_push_cochrane_guard.py
site/: index.html
site/assets/: tiba.css
site/evidence/: hiv-nextgen-art.html
site/templates/: index.html.j2
tests/: conftest.py  test_build_index.py  test_cochrane_guard.py  test_discover.py  test_fetcher.py  test_layers.py  test_renderer.py  test_schema.py  test_smoke.py  test_verifier.py
tests/fixtures/: invalid_tiba_bad_layer_enum.yaml  invalid_tiba_missing_layer.yaml  valid_tiba.yaml
tiba/generator/: build_index.py  discover.py  fetcher.py  layers.py  renderer.py  verifier.py
